// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CognitoConstruct + Identity Providers synthetizes properly 1`] = `
"{
  \\"Resources\\": {
    \\"CognitoPoolsmsRoleDC8B416D\\": {
      \\"Type\\": \\"AWS::IAM::Role\\",
      \\"Properties\\": {
        \\"AssumeRolePolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"sts:AssumeRole\\",
              \\"Condition\\": {
                \\"StringEquals\\": {
                  \\"sts:ExternalId\\": \\"StackCognitoPool4F622518\\"
                }
              },
              \\"Effect\\": \\"Allow\\",
              \\"Principal\\": {
                \\"Service\\": \\"cognito-idp.amazonaws.com\\"
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"Policies\\": [
          {
            \\"PolicyDocument\\": {
              \\"Statement\\": [
                {
                  \\"Action\\": \\"sns:Publish\\",
                  \\"Effect\\": \\"Allow\\",
                  \\"Resource\\": \\"*\\"
                }
              ],
              \\"Version\\": \\"2012-10-17\\"
            },
            \\"PolicyName\\": \\"sns-publish\\"
          }
        ]
      }
    },
    \\"CognitoPoolB9CB508B\\": {
      \\"Type\\": \\"AWS::Cognito::UserPool\\",
      \\"Properties\\": {
        \\"AdminCreateUserConfig\\": {
          \\"AllowAdminCreateUserOnly\\": false
        },
        \\"AutoVerifiedAttributes\\": [
          \\"email\\"
        ],
        \\"EmailConfiguration\\": {
          \\"EmailSendingAccount\\": \\"DEVELOPER\\",
          \\"SourceArn\\": {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:aws:ses:\\",
                {
                  \\"Ref\\": \\"AWS::Region\\"
                },
                \\":\\",
                {
                  \\"Ref\\": \\"AWS::AccountId\\"
                },
                \\":identity/tester@sender.com\\"
              ]
            ]
          }
        },
        \\"EmailVerificationMessage\\": \\"Hello {username}, Your verification code is {####}\\",
        \\"EmailVerificationSubject\\": \\"Verify your new account\\",
        \\"SmsConfiguration\\": {
          \\"ExternalId\\": \\"StackCognitoPool4F622518\\",
          \\"SnsCallerArn\\": {
            \\"Fn::GetAtt\\": [
              \\"CognitoPoolsmsRoleDC8B416D\\",
              \\"Arn\\"
            ]
          }
        },
        \\"SmsVerificationMessage\\": \\"The verification code to your new account is {####}\\",
        \\"UsernameAttributes\\": [
          \\"email\\"
        ],
        \\"UserPoolName\\": \\"dear-users\\",
        \\"VerificationMessageTemplate\\": {
          \\"DefaultEmailOption\\": \\"CONFIRM_WITH_CODE\\",
          \\"EmailMessage\\": \\"Hello {username}, Your verification code is {####}\\",
          \\"EmailSubject\\": \\"Verify your new account\\",
          \\"SmsMessage\\": \\"The verification code to your new account is {####}\\"
        }
      }
    },
    \\"CognitoPoolCient1A73565E\\": {
      \\"Type\\": \\"AWS::Cognito::UserPoolClient\\",
      \\"Properties\\": {
        \\"UserPoolId\\": {
          \\"Ref\\": \\"CognitoPoolB9CB508B\\"
        },
        \\"ClientName\\": \\"dear-users-client\\",
        \\"GenerateSecret\\": false
      }
    },
    \\"CognitoPoolFacebookIdP8D179BE9\\": {
      \\"Type\\": \\"AWS::Cognito::UserPoolIdentityProvider\\",
      \\"Properties\\": {
        \\"ProviderName\\": \\"Facebook\\",
        \\"ProviderType\\": \\"Facebook\\",
        \\"UserPoolId\\": {
          \\"Ref\\": \\"CognitoPoolB9CB508B\\"
        },
        \\"AttributeMapping\\": {
          \\"email\\": \\"email\\",
          \\"name\\": \\"name\\"
        },
        \\"ProviderDetails\\": {
          \\"client_id\\": \\"123412341\\",
          \\"client_secret\\": \\"12341asdas12341adf\\",
          \\"authorize_scopes\\": \\"public_profile,email\\"
        }
      }
    },
    \\"CognitoPoolGoogleIdP09966FB6\\": {
      \\"Type\\": \\"AWS::Cognito::UserPoolIdentityProvider\\",
      \\"Properties\\": {
        \\"ProviderName\\": \\"Google\\",
        \\"ProviderType\\": \\"Google\\",
        \\"UserPoolId\\": {
          \\"Ref\\": \\"CognitoPoolB9CB508B\\"
        },
        \\"AttributeMapping\\": {
          \\"email\\": \\"email\\",
          \\"name\\": \\"name\\"
        },
        \\"ProviderDetails\\": {
          \\"client_id\\": \\"12341324.apps.googleusercontent.com\\",
          \\"client_secret\\": \\"123412341\\",
          \\"authorize_scopes\\": \\"profile email openid\\"
        }
      }
    },
    \\"CognitoEnableProvidersFunctionServiceRole74154750\\": {
      \\"Type\\": \\"AWS::IAM::Role\\",
      \\"Properties\\": {
        \\"AssumeRolePolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"sts:AssumeRole\\",
              \\"Effect\\": \\"Allow\\",
              \\"Principal\\": {
                \\"Service\\": \\"lambda.amazonaws.com\\"
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"ManagedPolicyArns\\": [
          {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:\\",
                {
                  \\"Ref\\": \\"AWS::Partition\\"
                },
                \\":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\"
              ]
            ]
          }
        ]
      }
    },
    \\"CognitoEnableProvidersFunctionServiceRoleDefaultPolicy33F827DC\\": {
      \\"Type\\": \\"AWS::IAM::Policy\\",
      \\"Properties\\": {
        \\"PolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"cognito-idp:*\\",
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": \\"*\\"
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"PolicyName\\": \\"CognitoEnableProvidersFunctionServiceRoleDefaultPolicy33F827DC\\",
        \\"Roles\\": [
          {
            \\"Ref\\": \\"CognitoEnableProvidersFunctionServiceRole74154750\\"
          }
        ]
      }
    },
    \\"CognitoEnableProvidersFunctionA3947580\\": {
      \\"Type\\": \\"AWS::Lambda::Function\\",
      \\"Properties\\": {
        \\"Code\\": {
          \\"S3Bucket\\": {
            \\"Ref\\": \\"AssetParameters8ee8fb524eef3fdcf0c8f7b3a096bc2b85686756e8a3c7176c033e494f985168S3Bucket84802930\\"
          },
          \\"S3Key\\": {
            \\"Fn::Join\\": [
              \\"\\",
              [
                {
                  \\"Fn::Select\\": [
                    0,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"AssetParameters8ee8fb524eef3fdcf0c8f7b3a096bc2b85686756e8a3c7176c033e494f985168S3VersionKey04C3B8A9\\"
                        }
                      ]
                    }
                  ]
                },
                {
                  \\"Fn::Select\\": [
                    1,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"AssetParameters8ee8fb524eef3fdcf0c8f7b3a096bc2b85686756e8a3c7176c033e494f985168S3VersionKey04C3B8A9\\"
                        }
                      ]
                    }
                  ]
                }
              ]
            ]
          }
        },
        \\"Handler\\": \\"index.cognitoEnableProviders\\",
        \\"Role\\": {
          \\"Fn::GetAtt\\": [
            \\"CognitoEnableProvidersFunctionServiceRole74154750\\",
            \\"Arn\\"
          ]
        },
        \\"Runtime\\": \\"nodejs12.x\\",
        \\"Timeout\\": 60
      },
      \\"DependsOn\\": [
        \\"CognitoEnableProvidersFunctionServiceRoleDefaultPolicy33F827DC\\",
        \\"CognitoEnableProvidersFunctionServiceRole74154750\\"
      ]
    },
    \\"CognitoEnableProviders63DE8C9A\\": {
      \\"Type\\": \\"AWS::CloudFormation::CustomResource\\",
      \\"Properties\\": {
        \\"ServiceToken\\": {
          \\"Fn::GetAtt\\": [
            \\"CognitoEnableProvidersFunctionA3947580\\",
            \\"Arn\\"
          ]
        },
        \\"UserPoolId\\": {
          \\"Ref\\": \\"CognitoPoolB9CB508B\\"
        },
        \\"UserPoolClientId\\": {
          \\"Ref\\": \\"CognitoPoolCient1A73565E\\"
        },
        \\"Providers\\": [
          \\"Facebook\\",
          \\"Google\\"
        ],
        \\"CallbackUrls\\": [
          \\"https://localhost:3000/\\"
        ],
        \\"LogoutUrls\\": [
          \\"https://localhost:3000/\\"
        ]
      },
      \\"UpdateReplacePolicy\\": \\"Delete\\",
      \\"DeletionPolicy\\": \\"Delete\\"
    },
    \\"CognitoPoolDomainFunctionServiceRole9723885F\\": {
      \\"Type\\": \\"AWS::IAM::Role\\",
      \\"Properties\\": {
        \\"AssumeRolePolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"sts:AssumeRole\\",
              \\"Effect\\": \\"Allow\\",
              \\"Principal\\": {
                \\"Service\\": \\"lambda.amazonaws.com\\"
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"ManagedPolicyArns\\": [
          {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:\\",
                {
                  \\"Ref\\": \\"AWS::Partition\\"
                },
                \\":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\"
              ]
            ]
          }
        ]
      }
    },
    \\"CognitoPoolDomainFunctionServiceRoleDefaultPolicy9473F253\\": {
      \\"Type\\": \\"AWS::IAM::Policy\\",
      \\"Properties\\": {
        \\"PolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"cognito-idp:*\\",
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": \\"*\\"
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"PolicyName\\": \\"CognitoPoolDomainFunctionServiceRoleDefaultPolicy9473F253\\",
        \\"Roles\\": [
          {
            \\"Ref\\": \\"CognitoPoolDomainFunctionServiceRole9723885F\\"
          }
        ]
      }
    },
    \\"CognitoPoolDomainFunction9F0B8744\\": {
      \\"Type\\": \\"AWS::Lambda::Function\\",
      \\"Properties\\": {
        \\"Code\\": {
          \\"S3Bucket\\": {
            \\"Ref\\": \\"AssetParameters8ee8fb524eef3fdcf0c8f7b3a096bc2b85686756e8a3c7176c033e494f985168S3Bucket84802930\\"
          },
          \\"S3Key\\": {
            \\"Fn::Join\\": [
              \\"\\",
              [
                {
                  \\"Fn::Select\\": [
                    0,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"AssetParameters8ee8fb524eef3fdcf0c8f7b3a096bc2b85686756e8a3c7176c033e494f985168S3VersionKey04C3B8A9\\"
                        }
                      ]
                    }
                  ]
                },
                {
                  \\"Fn::Select\\": [
                    1,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"AssetParameters8ee8fb524eef3fdcf0c8f7b3a096bc2b85686756e8a3c7176c033e494f985168S3VersionKey04C3B8A9\\"
                        }
                      ]
                    }
                  ]
                }
              ]
            ]
          }
        },
        \\"Handler\\": \\"index.cognitoPoolDomain\\",
        \\"Role\\": {
          \\"Fn::GetAtt\\": [
            \\"CognitoPoolDomainFunctionServiceRole9723885F\\",
            \\"Arn\\"
          ]
        },
        \\"Runtime\\": \\"nodejs12.x\\",
        \\"Timeout\\": 60
      },
      \\"DependsOn\\": [
        \\"CognitoPoolDomainFunctionServiceRoleDefaultPolicy9473F253\\",
        \\"CognitoPoolDomainFunctionServiceRole9723885F\\"
      ]
    },
    \\"CognitoPoolDomainFBD21621\\": {
      \\"Type\\": \\"AWS::CloudFormation::CustomResource\\",
      \\"Properties\\": {
        \\"ServiceToken\\": {
          \\"Fn::GetAtt\\": [
            \\"CognitoPoolDomainFunction9F0B8744\\",
            \\"Arn\\"
          ]
        },
        \\"UserPoolId\\": {
          \\"Ref\\": \\"CognitoPoolB9CB508B\\"
        },
        \\"DomainPrefix\\": \\"myapp-login\\"
      },
      \\"UpdateReplacePolicy\\": \\"Delete\\",
      \\"DeletionPolicy\\": \\"Delete\\"
    }
  },
  \\"Parameters\\": {
    \\"AssetParameters8ee8fb524eef3fdcf0c8f7b3a096bc2b85686756e8a3c7176c033e494f985168S3Bucket84802930\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"S3 bucket for asset \\\\\\"8ee8fb524eef3fdcf0c8f7b3a096bc2b85686756e8a3c7176c033e494f985168\\\\\\"\\"
    },
    \\"AssetParameters8ee8fb524eef3fdcf0c8f7b3a096bc2b85686756e8a3c7176c033e494f985168S3VersionKey04C3B8A9\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"S3 key for asset version \\\\\\"8ee8fb524eef3fdcf0c8f7b3a096bc2b85686756e8a3c7176c033e494f985168\\\\\\"\\"
    },
    \\"AssetParameters8ee8fb524eef3fdcf0c8f7b3a096bc2b85686756e8a3c7176c033e494f985168ArtifactHashDB14117A\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"Artifact hash for asset \\\\\\"8ee8fb524eef3fdcf0c8f7b3a096bc2b85686756e8a3c7176c033e494f985168\\\\\\"\\"
    }
  }
}"
`;

exports[`CognitoConstruct + Lambda Triggers synthetizes properly 1`] = `
"{
  \\"Resources\\": {
    \\"CognitoPostConfirmServiceRole7954D5B6\\": {
      \\"Type\\": \\"AWS::IAM::Role\\",
      \\"Properties\\": {
        \\"AssumeRolePolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"sts:AssumeRole\\",
              \\"Effect\\": \\"Allow\\",
              \\"Principal\\": {
                \\"Service\\": \\"lambda.amazonaws.com\\"
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"ManagedPolicyArns\\": [
          {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:\\",
                {
                  \\"Ref\\": \\"AWS::Partition\\"
                },
                \\":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\"
              ]
            ]
          }
        ]
      }
    },
    \\"CognitoPostConfirmServiceRoleDefaultPolicyD365441B\\": {
      \\"Type\\": \\"AWS::IAM::Policy\\",
      \\"Properties\\": {
        \\"PolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"cognito-idp:*\\",
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": \\"*\\"
            },
            {
              \\"Action\\": \\"ses:SendEmail\\",
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": \\"*\\"
            },
            {
              \\"Action\\": \\"dynamodb:*\\",
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": [
                {
                  \\"Fn::Join\\": [
                    \\"\\",
                    [
                      \\"arn:aws:dynamodb:\\",
                      {
                        \\"Ref\\": \\"AWS::Region\\"
                      },
                      \\":*:table/USERS\\"
                    ]
                  ]
                },
                {
                  \\"Fn::Join\\": [
                    \\"\\",
                    [
                      \\"arn:aws:dynamodb:\\",
                      {
                        \\"Ref\\": \\"AWS::Region\\"
                      },
                      \\":*:table/USERS/index/*\\"
                    ]
                  ]
                }
              ]
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"PolicyName\\": \\"CognitoPostConfirmServiceRoleDefaultPolicyD365441B\\",
        \\"Roles\\": [
          {
            \\"Ref\\": \\"CognitoPostConfirmServiceRole7954D5B6\\"
          }
        ]
      }
    },
    \\"CognitoPostConfirm749659CE\\": {
      \\"Type\\": \\"AWS::Lambda::Function\\",
      \\"Properties\\": {
        \\"Code\\": {
          \\"S3Bucket\\": {
            \\"Ref\\": \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62S3Bucket60B0362A\\"
          },
          \\"S3Key\\": {
            \\"Fn::Join\\": [
              \\"\\",
              [
                {
                  \\"Fn::Select\\": [
                    0,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62S3VersionKey0758FFA8\\"
                        }
                      ]
                    }
                  ]
                },
                {
                  \\"Fn::Select\\": [
                    1,
                    {
                      \\"Fn::Split\\": [
                        \\"||\\",
                        {
                          \\"Ref\\": \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62S3VersionKey0758FFA8\\"
                        }
                      ]
                    }
                  ]
                }
              ]
            ]
          }
        },
        \\"Handler\\": \\"cognitoPostConfirm.handler\\",
        \\"Role\\": {
          \\"Fn::GetAtt\\": [
            \\"CognitoPostConfirmServiceRole7954D5B6\\",
            \\"Arn\\"
          ]
        },
        \\"Runtime\\": \\"nodejs12.x\\",
        \\"Timeout\\": 60
      },
      \\"DependsOn\\": [
        \\"CognitoPostConfirmServiceRoleDefaultPolicyD365441B\\",
        \\"CognitoPostConfirmServiceRole7954D5B6\\"
      ]
    },
    \\"CognitoPostConfirmPostConfirmationCognito02BB4149\\": {
      \\"Type\\": \\"AWS::Lambda::Permission\\",
      \\"Properties\\": {
        \\"Action\\": \\"lambda:InvokeFunction\\",
        \\"FunctionName\\": {
          \\"Fn::GetAtt\\": [
            \\"CognitoPostConfirm749659CE\\",
            \\"Arn\\"
          ]
        },
        \\"Principal\\": \\"cognito-idp.amazonaws.com\\"
      }
    },
    \\"CognitoPoolsmsRoleDC8B416D\\": {
      \\"Type\\": \\"AWS::IAM::Role\\",
      \\"Properties\\": {
        \\"AssumeRolePolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"sts:AssumeRole\\",
              \\"Condition\\": {
                \\"StringEquals\\": {
                  \\"sts:ExternalId\\": \\"StackCognitoPool4F622518\\"
                }
              },
              \\"Effect\\": \\"Allow\\",
              \\"Principal\\": {
                \\"Service\\": \\"cognito-idp.amazonaws.com\\"
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"Policies\\": [
          {
            \\"PolicyDocument\\": {
              \\"Statement\\": [
                {
                  \\"Action\\": \\"sns:Publish\\",
                  \\"Effect\\": \\"Allow\\",
                  \\"Resource\\": \\"*\\"
                }
              ],
              \\"Version\\": \\"2012-10-17\\"
            },
            \\"PolicyName\\": \\"sns-publish\\"
          }
        ]
      }
    },
    \\"CognitoPoolB9CB508B\\": {
      \\"Type\\": \\"AWS::Cognito::UserPool\\",
      \\"Properties\\": {
        \\"AdminCreateUserConfig\\": {
          \\"AllowAdminCreateUserOnly\\": false
        },
        \\"AutoVerifiedAttributes\\": [
          \\"email\\"
        ],
        \\"EmailConfiguration\\": {
          \\"EmailSendingAccount\\": \\"DEVELOPER\\",
          \\"SourceArn\\": {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:aws:ses:\\",
                {
                  \\"Ref\\": \\"AWS::Region\\"
                },
                \\":\\",
                {
                  \\"Ref\\": \\"AWS::AccountId\\"
                },
                \\":identity/tester@sender.com\\"
              ]
            ]
          }
        },
        \\"EmailVerificationMessage\\": \\"Hello {username}, Your verification code is {####}\\",
        \\"EmailVerificationSubject\\": \\"Verify your new account\\",
        \\"LambdaConfig\\": {
          \\"PostConfirmation\\": {
            \\"Fn::GetAtt\\": [
              \\"CognitoPostConfirm749659CE\\",
              \\"Arn\\"
            ]
          }
        },
        \\"SmsConfiguration\\": {
          \\"ExternalId\\": \\"StackCognitoPool4F622518\\",
          \\"SnsCallerArn\\": {
            \\"Fn::GetAtt\\": [
              \\"CognitoPoolsmsRoleDC8B416D\\",
              \\"Arn\\"
            ]
          }
        },
        \\"SmsVerificationMessage\\": \\"The verification code to your new account is {####}\\",
        \\"UsernameAttributes\\": [
          \\"email\\"
        ],
        \\"UserPoolName\\": \\"dear-users\\",
        \\"VerificationMessageTemplate\\": {
          \\"DefaultEmailOption\\": \\"CONFIRM_WITH_CODE\\",
          \\"EmailMessage\\": \\"Hello {username}, Your verification code is {####}\\",
          \\"EmailSubject\\": \\"Verify your new account\\",
          \\"SmsMessage\\": \\"The verification code to your new account is {####}\\"
        }
      }
    },
    \\"CognitoPoolCient1A73565E\\": {
      \\"Type\\": \\"AWS::Cognito::UserPoolClient\\",
      \\"Properties\\": {
        \\"UserPoolId\\": {
          \\"Ref\\": \\"CognitoPoolB9CB508B\\"
        },
        \\"ClientName\\": \\"dear-users-client\\",
        \\"GenerateSecret\\": false
      }
    }
  },
  \\"Parameters\\": {
    \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62S3Bucket60B0362A\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"S3 bucket for asset \\\\\\"f07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62\\\\\\"\\"
    },
    \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62S3VersionKey0758FFA8\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"S3 key for asset version \\\\\\"f07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62\\\\\\"\\"
    },
    \\"AssetParametersf07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62ArtifactHashD1B4CB31\\": {
      \\"Type\\": \\"String\\",
      \\"Description\\": \\"Artifact hash for asset \\\\\\"f07ecf78d8de4fd74f5fe314bf9505be390b1cc665ccc5b05ef8ce4aeed2be62\\\\\\"\\"
    }
  }
}"
`;

exports[`CognitoConstruct synthetizes properly 1`] = `
"{
  \\"Resources\\": {
    \\"CognitoPoolsmsRoleDC8B416D\\": {
      \\"Type\\": \\"AWS::IAM::Role\\",
      \\"Properties\\": {
        \\"AssumeRolePolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"sts:AssumeRole\\",
              \\"Condition\\": {
                \\"StringEquals\\": {
                  \\"sts:ExternalId\\": \\"StackCognitoPool4F622518\\"
                }
              },
              \\"Effect\\": \\"Allow\\",
              \\"Principal\\": {
                \\"Service\\": \\"cognito-idp.amazonaws.com\\"
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"Policies\\": [
          {
            \\"PolicyDocument\\": {
              \\"Statement\\": [
                {
                  \\"Action\\": \\"sns:Publish\\",
                  \\"Effect\\": \\"Allow\\",
                  \\"Resource\\": \\"*\\"
                }
              ],
              \\"Version\\": \\"2012-10-17\\"
            },
            \\"PolicyName\\": \\"sns-publish\\"
          }
        ]
      }
    },
    \\"CognitoPoolB9CB508B\\": {
      \\"Type\\": \\"AWS::Cognito::UserPool\\",
      \\"Properties\\": {
        \\"AdminCreateUserConfig\\": {
          \\"AllowAdminCreateUserOnly\\": false
        },
        \\"AutoVerifiedAttributes\\": [
          \\"email\\"
        ],
        \\"EmailConfiguration\\": {
          \\"EmailSendingAccount\\": \\"DEVELOPER\\",
          \\"SourceArn\\": {
            \\"Fn::Join\\": [
              \\"\\",
              [
                \\"arn:aws:ses:\\",
                {
                  \\"Ref\\": \\"AWS::Region\\"
                },
                \\":\\",
                {
                  \\"Ref\\": \\"AWS::AccountId\\"
                },
                \\":identity/tester@sender.com\\"
              ]
            ]
          }
        },
        \\"EmailVerificationMessage\\": \\"Hello {username}, Your verification code is {####}\\",
        \\"EmailVerificationSubject\\": \\"Verify your new account\\",
        \\"SmsConfiguration\\": {
          \\"ExternalId\\": \\"StackCognitoPool4F622518\\",
          \\"SnsCallerArn\\": {
            \\"Fn::GetAtt\\": [
              \\"CognitoPoolsmsRoleDC8B416D\\",
              \\"Arn\\"
            ]
          }
        },
        \\"SmsVerificationMessage\\": \\"The verification code to your new account is {####}\\",
        \\"UsernameAttributes\\": [
          \\"email\\"
        ],
        \\"UserPoolName\\": \\"dear-users\\",
        \\"VerificationMessageTemplate\\": {
          \\"DefaultEmailOption\\": \\"CONFIRM_WITH_CODE\\",
          \\"EmailMessage\\": \\"Hello {username}, Your verification code is {####}\\",
          \\"EmailSubject\\": \\"Verify your new account\\",
          \\"SmsMessage\\": \\"The verification code to your new account is {####}\\"
        }
      }
    },
    \\"CognitoPoolCient1A73565E\\": {
      \\"Type\\": \\"AWS::Cognito::UserPoolClient\\",
      \\"Properties\\": {
        \\"UserPoolId\\": {
          \\"Ref\\": \\"CognitoPoolB9CB508B\\"
        },
        \\"ClientName\\": \\"dear-users-client\\",
        \\"GenerateSecret\\": false
      }
    }
  }
}"
`;
